--- a/wisdomCampus/html/checkNotice/new_message.html
+++ b/wisdomCampus/html/checkNotice/new_message.html
@@ -392,7 +392,7 @@
 				}
 				events.showWaiting();
 				var tempData = {
-					schoolId: storageKeyName.SCHOOLID, //学校ID
+					schoolId: personal.schid, //学校ID
 					noticeTitle: message.title, //标题
 					noticeContent: message.content, //内容
 					noticEncName: encName, //附件名称
