--- a/wisdomCampus/html/signIn/atterecords.html
+++ b/wisdomCampus/html/signIn/atterecords.html
@@ -163,7 +163,7 @@
 			//15.获取考勤记录
 			function getAttendList(){
 				var tempData = {
-					schoolId: storageKeyName.SCHOOLID //学校ID
+					schoolId: personal.schid //学校ID
 					,deptId:'['+dptid+']'
 					,userId:'['+personal.utid+']'
 					,beginTime:_beginTime
