--- a/wisdomCampus/html/mine/about.html
+++ b/wisdomCampus/html/mine/about.html
@@ -30,7 +30,7 @@
 		</style>
 	</head>
 
-	<body>
+	<body style="background: white;">
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">关于我们</h1>
@@ -42,7 +42,7 @@
 					<p id="version" class='mui-ellipsis'>账号:hellomui</p>
 				</center>
 			</div>
-			<div class="mui-row" style="margin-top: 15px;">
+			<!--<div class="mui-row" style="margin-top: 15px;">
 				<ul class="mui-table-view mui-table-view-chevron">
 					<li class="mui-table-view-cell" id="qqqq">
 						<a href="javaScript:void(0)" class="mui-navigate-right">功能介绍</a>
@@ -54,7 +54,7 @@
 						<a href="javaScript:void(0)" class="mui-navigate-right">帮助</a>
 					</li>
 				</ul>
-			</div>
+			</div>-->
 		</div>
 		<div class="mui-row bottom-text">
 			<p class='mui-ellipsis'>Copyright&copy;2006-2018</p>
@@ -72,15 +72,15 @@
 					});
 			});
 
-			document.getElementById('qqqq').addEventListener('tap', function() {
-				mui.toast('功能暂未开放');
-			});
-			document.getElementById('wwww').addEventListener('tap', function() {
-				mui.toast('功能暂未开放');
-			});
-			document.getElementById('eeee').addEventListener('tap', function() {
-				mui.toast('功能暂未开放');
-			});
+//			document.getElementById('qqqq').addEventListener('tap', function() {
+//				mui.toast('功能暂未开放');
+//			});
+//			document.getElementById('wwww').addEventListener('tap', function() {
+//				mui.toast('功能暂未开放');
+//			});
+//			document.getElementById('eeee').addEventListener('tap', function() {
+//				mui.toast('功能暂未开放');
+//			});
 		</script>
 	</body>
 
