--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -239,9 +239,9 @@
 							<a class="aCss">记录人</a>
 							<span class="mui-navigate-right rCss no-icon">{{jlr}}</span>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="selectTime($event,'jlsj',-1)" data-options='{}'>
 							<a class="aCss">记录时间</a>
-							<p class="mui-navigate-right rCss no-icon">{{jlsj}}</p>
+							<p class="mui-navigate-right rCss ">{{jlsj}}</p>
 						</li>
 					</ul>
 				</div>
@@ -261,7 +261,7 @@
 								<li v-if="dayShow==1" class="mui-table-view-cell" style="padding: 0;" @tap="classItemCheckHalf(index)">
 									<div class="mui-input-row mui-checkbox mui-right">
 										<label style="width: 100%;">半天</label>
-										<input name="半天" value="halfday" type="checkbox" :disabled="abc.halfDayCanCheck==-1">
+										<input name="半天" value="halfDay" type="checkbox" :disabled="abc.halfDayCanCheck==-1">
 									</div>
 								</li>
 								<li class="mui-table-view-cell" style="padding: 0;" v-for="jc in jcList">
@@ -320,47 +320,6 @@
 				var wd = events.showWaiting();
 				getAttendanceDetail(comData, function(data) {
 					wd.close();
-					var test_json={
-						"code":"",
-						"msg":"",
-						"jsonString":"",
-						"state":"ok",
-						"jump":"",
-						"fileData":"",
-						"RspCode":"0000",
-						"RspTxt":"",
-						"RspData":{
-							"qa":[
-							{"dataArray":[
-							{"text":"请假","type":1,"value":12,"test":"qj"},
-							{"text":"迟到","type":0,"value":13,"test":"cd"},
-							{"text":"早退","type":0,"value":14,"test":"zt"},
-							{"text":"旷课","type":0,"value":15,"test":"kk"}],
-							"value":"classAttendance"},
-							{"dataArray":[
-							{"text":"午休未归","type":0,"value":16,"test":"wxwg"},
-							{"text":"午休吵闹","type":0,"value":17,"test":"wxcn"}
-							],"value":"dormitoryAttendance"},
-							{"dataArray":[{"text":"早操迟到","type":0,"value":18,"test":"zccd"},
-							{"text":"旷操","type":0,"value":19,"test":"kc"}],"value":"outClassAttendance"}],
-							"permission":[{"text":"可回宿舍","value":"backDorm"},{"text":"可出入校园","value":"outSchool"}],
-							"cn":[
-							{"text":"第一节","value":15},
-							{"text":"第二节","value":16},
-							{"text":"第三节","value":17},
-							{"text":"第四节","value":18},
-							{"text":"第五节","value":19},
-							{"text":"第六节","value":20},
-							{"text":"第七节","value":21},
-							{"text":"第八节","value":22},
-							{"text":"第九节","value":23},
-							{"text":"第十节","value":24}],"sa":{},
-							"atArray":[
-							{"text":"课堂考勤","value":"classAttendance"},
-							{"text":"宿舍考勤","value":"dormitoryAttendance"},
-							{"text":"课外考勤","value":"outClassAttendance"}]}}
-					
-					data=test_json
 					console.log('2.考勤详情' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						talkTitle.kqDetail = data.RspData;
@@ -486,7 +445,7 @@
 						var _self = event.target;
 						var obj = this;
 						var optionsJson = _self.getAttribute('data-options') || '{}';
-						if(lx == 'kqrq') {
+						if(lx == 'kqrq'||lx=='jlsj') {
 							optionsJson = '{"type":"date"}';
 						}
 						var options = JSON.parse(optionsJson);
@@ -505,7 +464,9 @@
 								} else {
 									mui.toast('结束时间不能早于开始时间');
 								}
-							} else if(lx = 'kqrq') {
+							} else if(lx =='jlsj'){
+								talkTitle.jlsj = rs.text;
+							} else if(lx == 'kqrq') {
 								var stime = rs.text;
 								var isContains = false;
 								for(var i = 0; i < obj.nodeSubJson.length; i++) {
@@ -524,7 +485,7 @@
 								} else {
 									mui.toast('不能选择相同时间');
 								}
-							}
+							} 
 							_self.picker.dispose();
 							_self.picker = null;
 						});
@@ -598,7 +559,7 @@
 							talkTitle.kqxxValue = _getParam(items[0], 'value');
 							talkTitle.qxShow = '0';
 							talkTitle.dayShow='0';
-							if(_getParam(items[0], 'test') == 'qj') {
+							if(_getParam(items[0], 'showInOut') == '1') {
 								talkTitle.qxShow = '1';
 							} else {
 								talkTitle.lxsj = '请选择';
@@ -608,7 +569,7 @@
 								talkTitle.sjShow = '0';
 							}
 							var type=_getParam(items[0], 'type');
-							if(_getParam(items[0], 'test') == 'qj'||_getParam(items[0], 'test') == 'qq'){//如果是请假和缺勤，显示全天和半天
+							if(_getParam(items[0], 'showInOut') == '1'){//如果是请假和缺勤，显示全天和半天
 								talkTitle.dayShow='1';
 							}
 						});
@@ -662,8 +623,8 @@
 								nodes.kmShow=-1;
 								nodes.subName = '请选择';
 								nodes.subCodes = '';
-							}else if(classes.indexOf("halfday") != -1){
-								nodes.classNodes.push('halfday');
+							}else if(classes.indexOf("halfDay") != -1){
+								nodes.classNodes.push('halfDay');
 								nodes.classNames ='半天';
 								nodes.kmShow=-1;
 								nodes.subName = '请选择';
@@ -766,23 +727,24 @@
 								explain: talkTitle.content, //考勤说明
 								outsidePermisionCode: talkTitle.qValue, //出入校门权限编码
 								recordTime: talkTitle.jlsj, //记录时间
+								recorder:talkTitle.jlr,//记录人
 								leaveSchoolTime: lxsj, //离校时间
 								backSchoolTime: hxsj //回校时间
 							}
 							console.log(JSON.stringify(comData));
-//							var wd = events.showWaiting();
-//							getSaveAttendance(comData, function(data) {
-//								wd.close();
-//								console.log('3.保存考勤' + JSON.stringify(data));
-//								if(data.RspCode == 0) {
-//									mui.toast('保存成功');
-//									setTimeout(function() {
-//										mui.back();
-//									}, 2000)
-//								} else {
-//									mui.toast(data.RspTxt);
-//								}
-//							});
+							var wd = events.showWaiting();
+							getSaveAttendance(comData, function(data) {
+								wd.close();
+								console.log('3.保存考勤' + JSON.stringify(data));
+								if(data.RspCode == 0) {
+									mui.toast('保存成功');
+									setTimeout(function() {
+										mui.back();
+									}, 2000)
+								} else {
+									mui.toast(data.RspTxt);
+								}
+							});
 						}
 
 					}
